WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83798
[Chromium] Fix some conditional compilation logic in Platform
https://bugs.webkit.org/show_bug.cgi?id=83798
Summary
[Chromium] Fix some conditional compilation logic in Platform
Gavin Peters
Reported
2012-04-12 11:32:42 PDT
Fix some conditional compilation logic in Platform
Attachments
Patch
(2.46 KB, patch)
2012-04-12 11:33 PDT
,
Gavin Peters
no flags
Details
Formatted Diff
Diff
fix WebFrameTests too
(4.70 KB, patch)
2012-04-23 08:31 PDT
,
Gavin Peters
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gavin Peters
Comment 1
2012-04-12 11:33:03 PDT
Created
attachment 136940
[details]
Patch
Gavin Peters
Comment 2
2012-04-12 11:34:54 PDT
Adam, WDYT?
WebKit Review Bot
Comment 3
2012-04-12 11:35:58 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
WebKit Review Bot
Comment 4
2012-04-12 12:08:03 PDT
Comment on
attachment 136940
[details]
Patch
Attachment 136940
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12391562
Gavin Peters
Comment 5
2012-04-12 12:16:29 PDT
That failure is very sadmaking. I'll rework the patch once I have a branch at head, and fix the environment of that test.
Adam Barth
Comment 6
2012-04-12 13:13:30 PDT
> Adam, WDYT?
Dunno. fishd should probably review this patch. I'm still a noob at reviewing API changes.
Gavin Peters
Comment 7
2012-04-23 08:31:08 PDT
Created
attachment 138354
[details]
fix WebFrameTests too
WebKit Review Bot
Comment 8
2012-04-25 07:41:43 PDT
Comment on
attachment 138354
[details]
fix WebFrameTests too Clearing flags on attachment: 138354 Committed
r115206
: <
http://trac.webkit.org/changeset/115206
>
WebKit Review Bot
Comment 9
2012-04-25 07:41:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug