[Chromium] Fix some conditional compilation logic in Platform https://bugs.webkit.org/show_bug.cgi?id=83798

Reviewed by Darin Fisher.

Source/Platform:

* chromium/public/WebURLError.h:
(WebURLError):
* chromium/public/WebURLRequest.h:
(WebURLRequest):
* chromium/public/WebURLResponse.h:
(WebURLResponse):

Source/WebKit/chromium:

* tests/WebFrameTest.cpp:
(WebKit::TestReloadDoesntRedirectWebFrameClient::cancelledError):


Canonical link: https://commits.webkit.org/102360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115206 268f45cc-cd09-0410-ab3c-d52691b4dbfc