Source/Platform/chromium/public/WebURLError.h
@@ -34,7 +34,7 @@
 #include "WebString.h"
 #include "WebURL.h"
 
-#if defined(WEBKIT_IMPLEMENTATION)
+#if WEBKIT_IMPLEMENTATION
 namespace WebCore { class ResourceError; }
 #endif
 
@@ -64,7 +64,7 @@ struct WebURLError {
 
     WebURLError() : reason(0), isCancellation(false) { }
 
-#if defined(WEBKIT_IMPLEMENTATION)
+#if WEBKIT_IMPLEMENTATION
     WebURLError(const WebCore::ResourceError&);
     WebURLError& operator=(const WebCore::ResourceError&);
     operator WebCore::ResourceError() const;
